@@ -1,24 +1,32 @@
-package webserver.handler;
+package webserver.adapter;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import webserver.header.RequestHeader;
+import webserver.handler.RequestHandler;
+import webserver.request.Request;
 import webserver.response.Response;
 import webserver.type.ContentType;
 
 import java.io.File;
+import java.io.FileInputStream;
 import java.io.IOException;
 import java.net.URL;
-import java.nio.file.Files;
 
-public class ResourceHandler {
+public class ResourceAdapter implements Adapter{
     private static final Logger logger = LoggerFactory.getLogger(RequestHandler.class);
 
-    private static final URL HTML_BASE_URL = ResourceHandler.class.getClassLoader().getResource("./templates");
-    private static final URL OTHERS_BASE_URL = ResourceHandler.class.getClassLoader().getResource("./static");
+    private static final URL HTML_BASE_URL = ResourceAdapter.class.getClassLoader().getResource("./templates");
+    private static final URL OTHERS_BASE_URL = ResourceAdapter.class.getClassLoader().getResource("./static");
+    private static final ResourceAdapter resourceAdapter = new ResourceAdapter();
 
-    public static Response run(RequestHeader requestHeader) throws IOException {
-        String path = requestHeader.getPath();
+    private ResourceAdapter(){}
+
+    public static ResourceAdapter getInstance(){
+        return resourceAdapter;
+    }
+
+    public Response run(Request request) throws IOException {
+        String path = request.getPath();
         String requestFileExtension = getRequestFileExtension(path);
 
         logger.debug(requestFileExtension);
@@ -34,9 +42,22 @@ public class ResourceHandler {
         return makeResponse(file, contentType);
     }
 
+    @Override
+    public boolean canRun(Request request) {
+        if(request.getMethod().equals("GET")){
+            return new File(HTML_BASE_URL.getPath() + request.getPath()).exists() ||
+                   new File(OTHERS_BASE_URL.getPath() + request.getPath()).exists();
+        }
+
+        return false;
+    }
+
     private static Response makeResponse(File file, ContentType contentType) throws IOException {
         if(!file.isDirectory() && file.exists()) {
-            return Response.onSuccess(contentType, Files.readAllBytes(file.toPath()));
+            FileInputStream fis = new FileInputStream(file);
+            byte[] body = fis.readAllBytes();
+
+            return Response.onSuccess(body, contentType);
         }
 
         return null;
